--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-ui-library",
   "version": "0.0.1",
   "description": "Example react component library boilerplate.",
-  "main": "index.js",
+  "main": "dist/cjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/srhtak/react-ui-library-boilerplate#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^5.5.4"
   },
   "peerDependencies": {
