--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-ui-library",
   "version": "0.0.1",
   "description": "Example react component library boilerplate.",
-  "main": "dist/cjs",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
