--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^18.2.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-postcss": "^4.0.2",
+    "styled-components": "^6.1.12",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4"
   },
