--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "release": "standard-version"
   },
   "jest": {
     "testEnvironment": "jsdom"
@@ -45,6 +46,8 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@chromatic-com/storybook": "^1.6.1",
     "@eslint/js": "^9.8.0",
     "@rollup/plugin-commonjs": "^26.0.1",
@@ -76,6 +79,7 @@
     "react-dom": "^18.2.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-postcss": "^4.0.2",
+    "standard-version": "^9.5.0",
     "storybook": "^8.2.7",
     "styled-components": "^6.1.12",
     "tslib": "^2.6.3",
