--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ui-library",
+  "name": "peer-react-ui-library",
   "version": "0.0.1",
   "description": "Example react component library boilerplate.",
   "main": "dist/cjs/index.js",
