chore: trigger pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,9 +57,11 @@ run_release:
     - git config --global user.email "$GIT_EMAIL"
     - git config --global user.name "$GIT_NAME"
     - npm run release
-    - git add .
-    - git commit -m "Release version $(node -p "require('./package.json').version")"
-    - git push --follow-tags gitlab main
+    - |
+      git checkout main
+      git add .
+      git commit -m "feat(release): release version $(node -p "require('./package.json').version")"
+      git push origin main --follow-tags
   dependencies:
     - build
 
