--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,6 @@
     /* Completeness */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "jest.config.js"],
   "exclude": ["node_modules"]
 }
